fix(permission): 征询撤回说真实原因(任务收场、主人按停止、她离开或死了),给主人看的文案中英都在语言文件
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>